--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
     text-transform: capitalize;
     font-size: 16px;
     font-weight: 500;
-    transition: 0.5s;
+    transition: .5s;
 
 
 
@@ -73,7 +73,7 @@ body{
 }
 
   .sub-btn{
-      background-color: #1f80e0;
+      background: #1f80e0; 
       height: 30px;
       padding: 0 20px;
       color: #fff;
@@ -132,12 +132,12 @@ body{
    }
 
    .slider img{
-       width: 70%;
+       width: 60%;
        min-height: 100%;
        object-fit: cover ;
        display: block;
        margin-left: auto;
-       image-rendering: optimizeQuality;
+       
        
 
    }
@@ -165,6 +165,210 @@ body{
        opacity: 0.8;
 
    }
+
+   .video-card-container{
+       position: relative;
+       width: 92%;
+       margin: auto;
+       height: 10vw;
+       display: flex;
+       margin-bottom: 20px;
+       justify-content: space-between;
+   }   
+
+   .video-card{
+       position: relative;
+       min-width: calc(100%/5 - 10px);
+       width: calc(100%/5 - 10px);
+       height: 100%;
+       border-radius: 5px;
+       overflow: hidden;
+       background: #030b17;
+        }
+
+    .video-card-image,
+    .card-video{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card-video{
+        position: absolute;
+        
+    }
+
+     
+
+    .video-card:hover .video-card-image{
+        display: none;}
+
+
+    .title{
+        color: #fff;
+        opacity: 0.9;
+        padding-left: 4%;
+        text-transform: capitalize;
+        font-size: 22px;
+        font-weight: 500;
+    }    
+
+    .movies-list{
+        width: 100%;
+        height: 220px;
+        position: relative;
+        margin: 10px 0 20px;
+    }
+
+    .card-container{
+        position: absolute;
+        width: 92%;
+        padding-left: 110px;
+        height: 220px;
+        display: flex;
+        margin: 0 auto;
+        align-items: center;
+        overflow-x: auto;
+        overflow-y: visible;
+        scroll-behavior: smooth;
+    }
+
+    .card-container::-webkit-scrollbar{
+        display: none;
+    }
+
+    .card{
+        position: relative;
+        min-width: 150px;
+        width: 150px;
+        height: 200px;
+        border-radius: 5px;
+        overflow: hidden;
+        margin-right: 10px;
+        transition: .5s;
+        background: #000;
+    }
+
+    .card-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card:hover{
+        transform: scale(1.1);
+    }
+
+    .card:hover .card-body{
+        opacity: 1;
+    }
+
+     .card-body{
+         opacity: 0;
+         width: 100%;
+         height: 100%;
+         position: absolute;
+         top: 0;
+         left: 0;
+         z-index: 2;
+         background: linear-gradient(to bottom, rgba(4, 8, 15, 0), #192133 90%);
+         padding: 10px;
+         transition: 0.5s;
+        }
+
+        .name{
+            color: #fff;
+            font-size: 15px;
+            font-weight: 500;
+            text-transform: capitalize;
+            margin-top: 60%;
+        }
+
+        .des{
+            color: #fff;
+            opacity: 0.8;
+            margin: 5px 0;
+            font-weight: 500;
+            font-size: 12px;
+        }
+
+        .watchlist-btn{
+            position: absolute;
+            width: 100%;
+            text-transform: capitalize;
+            background: none;
+            border: none;
+            font-weight: 500;
+            text-align: center;
+            color: rgba(255, 255, 255, 0.5);
+            margin: 5px 0;
+            cursor: pointer;
+            padding: 10px 5px;
+            border-radius: 5px;
+}
+
+.watchlist-btn::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    height: 35px;
+    width: 35px;
+    background-image: url(/img/add.png);
+    background-size: cover;
+    transform: scale(0.4);
+}
+
+.watchlist-btn:hover{
+    color: #fff;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.pre-btn,
+.nxt-btn{
+    position: absolute;
+    top: 0;
+    width: 5%;
+    height: 100%;
+    z-index: 2;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+ .pre-btn{
+     left: 0;
+     background: linear-gradient(to right, #0c111b 0%, #0c111b00);
+ }
+
+ .nxt-btn{
+    right: 0;
+    background: linear-gradient(to left, #0c111b 0%, #0c111b00);
+}
+
+.pre-btn img,
+.nxt-btn img{
+    width: 15px;
+    height: 20px;
+    opacity: 0;
+}
+
+.pre-btn:hover img,
+.nxt-btn:hover img{
+    opacity: 1;
+}
+
+
+
+
+
+
+
+     
+
+
+
+
 
 
 
